--- a/briar-android/src/main/res/layout/list_item_group.xml
+++ b/briar-android/src/main/res/layout/list_item_group.xml
@@ -97,7 +97,7 @@
 
 	<View
 		android:id="@+id/divider"
-		style="@style/Divider.ForumList"
+		style="@style/Divider.ThreadItem"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		android:layout_below="@+id/statusView"
