--- a/briar-android/src/main/res/layout/list_item_invitations.xml
+++ b/briar-android/src/main/res/layout/list_item_invitations.xml
@@ -81,7 +81,7 @@
 		android:text="@string/decline"/>
 
 	<View
-		style="@style/Divider.ForumList"
+		style="@style/Divider.ThreadItem"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
 		android:layout_below="@+id/acceptButton"/>
