--- a/briar-android/src/main/res/layout/list_item_thread.xml
+++ b/briar-android/src/main/res/layout/list_item_thread.xml
@@ -62,23 +62,20 @@
 			android:background="@drawable/level_indicator_circle"
 			android:gravity="center"
 			android:textSize="@dimen/text_size_small"
-			android:visibility="gone"
-			/>
+			android:visibility="gone"/>
 
 	</RelativeLayout>
 
 	<RelativeLayout
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="@dimen/margin_medium"
 		android:layout_weight="1">
 
 		<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 			android:id="@+id/text"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingRight="@dimen/margin_medium"
-			android:paddingTop="@dimen/margin_medium"
+			android:padding="@dimen/margin_medium"
 			android:textColor="@color/briar_text_primary"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
@@ -87,26 +84,12 @@
 		<org.briarproject.briar.android.view.AuthorView
 			android:id="@+id/author"
 			android:layout_width="wrap_content"
-			android:layout_height="@dimen/button_size"
+			android:layout_height="wrap_content"
 			android:layout_alignLeft="@id/text"
 			android:layout_below="@id/text"
-			android:gravity="center"
-			app:persona="commenter"/>
-
-		<TextView
-			android:id="@+id/replies"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignBottom="@+id/author"
-			android:layout_alignTop="@+id/author"
+			android:layout_marginLeft="@dimen/margin_medium"
 			android:layout_toLeftOf="@+id/btn_reply"
-			android:layout_toRightOf="@+id/author"
-			android:ellipsize="end"
-			android:gravity="right|end|center_vertical"
-			android:maxLines="1"
-			android:padding="@dimen/margin_medium"
-			android:textSize="@dimen/text_size_tiny"
-			tools:text="2 replies"/>
+			app:persona="commenter"/>
 
 		<TextView
 			android:id="@+id/btn_reply"
@@ -115,32 +98,17 @@
 			android:layout_height="wrap_content"
 			android:layout_alignBottom="@+id/author"
 			android:layout_alignParentRight="true"
-			android:layout_toLeftOf="@+id/chevron"
+			android:layout_below="@+id/text"
+			android:layout_marginRight="@dimen/margin_medium"
 			android:text="@string/btn_reply"
 			android:textSize="@dimen/text_size_tiny"/>
 
-		<ImageView
-			android:id="@+id/chevron"
-			android:layout_width="@dimen/button_size"
-			android:layout_height="@dimen/button_size"
-			android:layout_alignBottom="@+id/author"
-			android:layout_alignParentRight="true"
-			android:background="?attr/selectableItemBackground"
-			android:clickable="true"
-			android:padding="@dimen/margin_medium"
-			android:scaleType="center"
-			android:src="@drawable/selector_chevron"
-			android:visibility="gone"/>
-
 		<View
-			android:id="@+id/top_divider"
-			style="@style/Divider.ForumList"
-			android:layout_width="match_parent"
-			android:layout_height="@dimen/margin_separator"
+			style="@style/Divider.ThreadItem"
 			android:layout_alignLeft="@id/text"
-			android:layout_alignParentTop="true"/>
+			android:layout_below="@+id/author"
+			android:layout_marginTop="@dimen/margin_medium"/>
 
 	</RelativeLayout>
-
 
 </LinearLayout>
