--- a/briar-android/src/main/res/values/styles.xml
+++ b/briar-android/src/main/res/values/styles.xml
@@ -79,7 +79,7 @@
 		<item name="android:layout_marginLeft">@dimen/margin_large</item>
 	</style>
 
-	<style name="Divider.ForumList" parent="Divider">
+	<style name="Divider.ThreadItem" parent="Divider">
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">1dp</item>
 	</style>
@@ -102,7 +102,7 @@
 
 	<style name="DiscussionLevelIndicator">
 		<item name="android:layout_marginLeft">4dp</item>
-		<item name="android:background">?android:attr/listDivider</item>
+		<item name="android:background">@color/divider</item>
 	</style>
 
 	<style name="BriarTabLayout" parent="Widget.Design.TabLayout">
