--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -15,13 +15,13 @@
 			android:title="@string/bluetooth_setting"/>
 
 		<ListPreference
-			android:defaultValue="true"
-			android:entries="@array/tor_mobile_setting_names"
-			android:entryValues="@array/boolean_array"
-			android:key="pref_key_tor_mobile"
+			android:defaultValue="2"
+			android:entries="@array/tor_network_setting_names"
+			android:entryValues="@array/tor_network_setting_values"
+			android:key="pref_key_tor_network"
 			android:persistent="false"
 			android:summary="%s"
-			android:title="@string/tor_mobile_setting"/>
+			android:title="@string/tor_network_setting"/>
 
 	</PreferenceCategory>
 
