--- a/briar-android/src/main/res/xml/panic_preferences.xml
+++ b/briar-android/src/main/res/xml/panic_preferences.xml
@@ -2,35 +2,31 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<ListPreference
+		android:icon="@android:drawable/ic_menu_close_clear_cancel"
+		android:key="pref_key_panic_app"
+		android:summary="@string/panic_app_setting_summary"
+		android:title="@string/panic_app_setting_title"/>
+
 	<CheckBoxPreference
+		android:defaultValue="true"
+		android:enabled="false"
 		android:key="pref_key_lock"
-		android:title="@string/lock_setting_title"
 		android:summary="@string/lock_setting_summary"
-		android:defaultValue="true"/>
+		android:title="@string/lock_setting_title"/>
 
-	<PreferenceCategory
-		android:title="Destructive Actions">
+	<CheckBoxPreference
+		android:defaultValue="false"
+		android:enabled="false"
+		android:key="pref_key_purge"
+		android:summary="@string/purge_setting_summary"
+		android:title="@string/purge_setting_title"/>
 
-		<ListPreference
-			android:key="pref_key_panic_app"
-			android:title="@string/panic_app_setting_title"
-			android:summary="@string/panic_app_setting_summary"
-			android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
-
-		<CheckBoxPreference
-			android:key="pref_key_purge"
-			android:title="@string/purge_setting_title"
-			android:summary="@string/purge_setting_summary"
-			android:enabled="false"
-			android:defaultValue="false"/>
-
-		<CheckBoxPreference
-			android:key="pref_key_uninstall"
-			android:title="@string/uninstall_setting_title"
-			android:summary="@string/uninstall_setting_summary"
-			android:enabled="false"
-			android:defaultValue="false"/>
-
-	</PreferenceCategory>
+	<CheckBoxPreference
+		android:defaultValue="false"
+		android:enabled="false"
+		android:key="pref_key_uninstall"
+		android:summary="@string/uninstall_setting_summary"
+		android:title="@string/uninstall_setting_title"/>
 
 </PreferenceScreen>
