--- a/briar-android/src/main/res/layout/introduction_message.xml
+++ b/briar-android/src/main/res/layout/introduction_message.xml
@@ -38,7 +38,7 @@
 						android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 						android:layout_marginRight="@dimen/listitem_horizontal_margin"
 						android:layout_marginStart="@dimen/listitem_horizontal_margin"
-						tools:src="@drawable/ic_launcher"/>
+						tools:src="@mipmap/ic_launcher_round"/>
 
 					<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 						android:id="@+id/nameContact1"
@@ -77,7 +77,7 @@
 						android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 						android:layout_marginRight="@dimen/listitem_horizontal_margin"
 						android:layout_marginStart="@dimen/listitem_horizontal_margin"
-						tools:src="@drawable/ic_launcher"/>
+						tools:src="@mipmap/ic_launcher_round"/>
 
 					<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 						android:id="@+id/nameContact2"
