Open feed's blog when clicking it in 'manage activity'

--- a/briar-android/src/main/res/layout/list_item_rss_feed.xml
+++ b/briar-android/src/main/res/layout/list_item_rss_feed.xml
@@ -19,7 +19,7 @@
 		android:textSize="@dimen/text_size_medium"
 		tools:text="This is a name of a RSS Feed"/>
 
-	<ImageView
+	<ImageButton
 		android:id="@+id/deleteButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
