Darken thread indicator

--- a/briar-android/src/main/res/drawable/level_indicator_circle.xml
+++ b/briar-android/src/main/res/drawable/level_indicator_circle.xml
@@ -5,5 +5,5 @@
 
 	<stroke
 		android:width="2dp"
-		android:color="@color/forum_discussion_nested_line"/>
+		android:color="@color/thread_indicator"/>
 </shape>
