Don't show tap protection dialog until it's needed.

--- a/briar-android/src/main/res/layout/alert_dialog_checkbox.xml
+++ b/briar-android/src/main/res/layout/alert_dialog_checkbox.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:filterTouchesWhenObscured="false"
-              android:orientation="vertical">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
 	<ScrollView
 		android:layout_width="match_parent"
@@ -28,13 +28,12 @@
 	</ScrollView>
 
 	<CheckBox
-		android:id="@+id/checkBox_screen_filter_reminder"
+		android:id="@+id/checkbox_dont_show_again"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="15dp"
 		android:layout_marginStart="15dp"
 		android:layout_weight="0"
-		android:filterTouchesWhenObscured="false"
 		android:text="@string/checkbox_dont_show_again"
 		android:textAppearance="@style/BriarTextBody"/>
 </LinearLayout>
