--- a/briar-android/src/main/res/layout/fragment_create_group.xml
+++ b/briar-android/src/main/res/layout/fragment_create_group.xml
@@ -3,22 +3,27 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:gravity="center_horizontal"
 	android:orientation="vertical"
-	android:padding="@dimen/margin_medium">
+	android:layout_margin="@dimen/margin_large">
 
 	<EditText
 		android:id="@+id/name"
 		android:layout_width="match_parent"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:gravity="bottom"
+		android:layout_height="wrap_content"
 		android:maxLines="1"
 		android:inputType="text|textCapSentences"
 		android:hint="@string/groups_create_group_hint"/>
 
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/feedback"
+		android:gravity="center" />
+
 	<Button
-		android:id="@+id/button"
 		style="@style/BriarButton"
+		android:id="@+id/button"
 		android:enabled="false"
 		android:text="@string/groups_create_group_button"/>
 
