--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -61,25 +61,29 @@
 			android:defaultValue="true"
 			android:key="pref_key_notify_private_messages"
 			android:persistent="false"
-			android:title="@string/notify_private_messages_setting"/>
+			android:title="@string/notify_private_messages_setting_title"
+			android:summary="@string/notify_private_messages_setting_summary"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_group_messages"
 			android:persistent="false"
-			android:title="@string/notify_group_messages_setting"/>
+			android:title="@string/notify_group_messages_setting_title"
+			android:summary="@string/notify_group_messages_setting_summary"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_forum_posts"
 			android:persistent="false"
-			android:title="@string/notify_forum_posts_setting"/>
+			android:title="@string/notify_forum_posts_setting_title"
+			android:summary="@string/notify_forum_posts_setting_summary"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_blog_posts"
 			android:persistent="false"
-			android:title="@string/notify_blog_posts_setting"/>
+			android:title="@string/notify_blog_posts_setting_title"
+			android:summary="@string/notify_blog_posts_setting_summary"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
