--- a/briar-android/src/main/res/layout/activity_nav_drawer.xml
+++ b/briar-android/src/main/res/layout/activity_nav_drawer.xml
@@ -30,7 +30,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_toLeftOf="@+id/expiryWarningClose"
-				android:text="@string/expiry_warning"
+				android:text="@plurals/expiry_warning"
 				android:textColor="@color/briar_text_primary_inverse"
 				android:textSize="@dimen/text_size_small"/>
 
