Add an option to debug builds to create fake test data

--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -114,4 +114,8 @@
 
 	</PreferenceCategory>
 
+	<Preference
+		android:key="pref_key_test_data"
+		android:title="Create Test Data"/>
+
 </PreferenceScreen>
