Setup Wizard that asks for Doze Mode exception
Keep checking if we are whitelisted and request it if not

--- a/briar-android/src/main/res/layout/fragment_setup_password.xml
+++ b/briar-android/src/main/res/layout/fragment_setup_password.xml
@@ -5,12 +5,11 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".android.login.SetupActivity">
+	android:fillViewport="true">
 
-	<RelativeLayout
+	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical"
 		android:paddingBottom="@dimen/margin_activity_vertical"
 		android:paddingEnd="@dimen/margin_activity_horizontal"
 		android:paddingLeft="@dimen/margin_activity_horizontal"
@@ -18,38 +17,16 @@
 		android:paddingStart="@dimen/margin_activity_horizontal"
 		android:paddingTop="@dimen/margin_activity_vertical">
 
-		<TextView
-			android:id="@+id/setup_explanation"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="@string/setup_explanation"/>
-
-		<android.support.design.widget.TextInputLayout
-			android:id="@+id/nickname_entry_wrapper"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/setup_explanation"
-			android:layout_centerHorizontal="true"
-			android:layout_marginTop="@dimen/margin_medium"
-			app:errorEnabled="true">
-
-			<android.support.design.widget.TextInputEditText
-				android:id="@+id/nickname_entry"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:hint="@string/choose_nickname"
-				android:imeOptions="actionNext"
-				android:inputType="text|textCapWords"
-				android:maxLines="1"/>
-		</android.support.design.widget.TextInputLayout>
-
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/password_entry_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/nickname_entry_wrapper"
-			android:layout_centerHorizontal="true"
-			app:errorEnabled="true">
+			android:layout_marginTop="8dp"
+			app:errorEnabled="true"
+			app:hintEnabled="false"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
 
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/password_entry"
@@ -58,55 +35,70 @@
 				android:hint="@string/choose_password"
 				android:imeOptions="actionNext"
 				android:inputType="textPassword"
-				android:maxLines="1"/>
+				android:maxLines="1">
+
+				<requestFocus/>
+			</android.support.design.widget.TextInputEditText>
+
 		</android.support.design.widget.TextInputLayout>
 
 		<org.briarproject.briar.android.login.StrengthMeter
 			android:id="@+id/strength_meter"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/password_entry_wrapper"
-			android:layout_centerHorizontal="true"
-			android:layout_marginBottom="@dimen/margin_medium"
-			android:visibility="gone"/>
+			android:layout_marginTop="8dp"
+			android:visibility="invisible"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/password_entry_wrapper"
+			tools:visibility="visible"/>
 
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/password_confirm_wrapper"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/strength_meter"
-			android:layout_centerHorizontal="true"
-			app:errorEnabled="true">
+			android:layout_marginTop="8dp"
+			app:errorEnabled="true"
+			app:hintEnabled="false"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/strength_meter">
 
 			<android.support.design.widget.TextInputEditText
 				android:id="@+id/password_confirm"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:hint="@string/confirm_password"
-				android:imeOptions="actionDone"
 				android:inputType="textPassword"
 				android:maxLines="1"/>
 		</android.support.design.widget.TextInputLayout>
 
 		<Button
-			android:id="@+id/create_account"
+			android:id="@+id/next"
 			style="@style/BriarButton.Default"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@+id/password_confirm_wrapper"
-			android:layout_centerHorizontal="true"
 			android:enabled="false"
-			android:text="@string/create_account_button"/>
+			android:text="@string/setup_next"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/password_confirm_wrapper"
+			app:layout_constraintVertical_bias="1.0"
+			tools:enabled="true"/>
 
 		<ProgressBar
-			android:id="@+id/progress_wheel"
+			android:id="@+id/progress"
 			style="?android:attr/progressBarStyle"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignTop="@id/create_account"
-			android:layout_centerHorizontal="true"
-			android:visibility="invisible"/>
+			android:visibility="invisible"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/password_confirm_wrapper"
+			app:layout_constraintVertical_bias="1.0"/>
 
-	</RelativeLayout>
+	</android.support.constraint.ConstraintLayout>
 
 </ScrollView>
