--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -25,6 +25,8 @@
 
 	</PreferenceCategory>
 
+	<PreferenceCategory android:layout="@layout/divider_preference"/>
+
 	<PreferenceCategory
 		android:title="@string/security_settings_title">
 
@@ -38,6 +40,8 @@
 		</Preference>
 
 	</PreferenceCategory>
+
+	<PreferenceCategory android:layout="@layout/divider_preference"/>
 
 	<PreferenceCategory
 		android:title="@string/panic_setting_title">
@@ -54,6 +58,8 @@
 
 	</PreferenceCategory>
 
+	<PreferenceCategory android:layout="@layout/divider_preference"/>
+
 	<PreferenceCategory
 		android:title="@string/notification_settings_title">
 
@@ -61,36 +67,36 @@
 			android:defaultValue="true"
 			android:key="pref_key_notify_private_messages"
 			android:persistent="false"
-			android:title="@string/notify_private_messages_setting_title"
-			android:summary="@string/notify_private_messages_setting_summary"/>
+			android:summary="@string/notify_private_messages_setting_summary"
+			android:title="@string/notify_private_messages_setting_title"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_group_messages"
 			android:persistent="false"
-			android:title="@string/notify_group_messages_setting_title"
-			android:summary="@string/notify_group_messages_setting_summary"/>
+			android:summary="@string/notify_group_messages_setting_summary"
+			android:title="@string/notify_group_messages_setting_title"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_forum_posts"
 			android:persistent="false"
-			android:title="@string/notify_forum_posts_setting_title"
-			android:summary="@string/notify_forum_posts_setting_summary"/>
+			android:summary="@string/notify_forum_posts_setting_summary"
+			android:title="@string/notify_forum_posts_setting_title"/>
 
 		<CheckBoxPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_blog_posts"
 			android:persistent="false"
-			android:title="@string/notify_blog_posts_setting_title"
-			android:summary="@string/notify_blog_posts_setting_summary"/>
+			android:summary="@string/notify_blog_posts_setting_summary"
+			android:title="@string/notify_blog_posts_setting_title"/>
 
 		<CheckBoxPreference
 			android:defaultValue="false"
 			android:key="pref_key_notify_lock_screen"
 			android:persistent="false"
-			android:title="@string/notify_lock_screen_setting_title"
 			android:summary="@string/notify_lock_screen_setting_summary"
+			android:title="@string/notify_lock_screen_setting_title"
 			android:visibility="gone"/>
 
 		<CheckBoxPreference
@@ -104,6 +110,8 @@
 			android:title="@string/notify_sound_setting"/>
 
 	</PreferenceCategory>
+
+	<PreferenceCategory android:layout="@layout/divider_preference"/>
 
 	<PreferenceCategory
 		android:title="@string/feedback_settings_title">
