--- a/briar-android/src/main/res/layout-land/fragment_keyagreement_id.xml
+++ b/briar-android/src/main/res/layout-land/fragment_keyagreement_id.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/scrollView"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="horizontal">
+	android:layout_height="wrap_content"
+	android:orientation="vertical">
 
-	<ImageView
-		android:id="@+id/imageView"
-		android:layout_width="0dp"
+	<LinearLayout
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center_vertical"
-		android:layout_weight="1"
-		android:adjustViewBounds="true"
-		android:paddingBottom="@dimen/margin_activity_vertical"
-		android:paddingEnd="@dimen/margin_activity_horizontal"
-		android:paddingLeft="@dimen/margin_activity_horizontal"
-		android:paddingRight="@dimen/margin_activity_horizontal"
-		android:paddingStart="@dimen/margin_activity_horizontal"
-		android:paddingTop="@dimen/margin_activity_vertical"
-		android:scaleType="fitCenter"
-		android:src="@drawable/qr_code_intro"/>
-
-	<ScrollView
-		android:id="@+id/scrollView"
-		android:layout_width="0dp"
-		android:layout_height="match_parent"
-		android:layout_weight="1">
+		android:orientation="vertical"
+		android:padding="@dimen/margin_large">
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			android:paddingBottom="@dimen/margin_activity_vertical"
-			android:paddingEnd="@dimen/margin_activity_horizontal"
-			android:paddingLeft="@dimen/margin_activity_horizontal"
-			android:paddingRight="@dimen/margin_activity_horizontal"
-			android:paddingStart="@dimen/margin_activity_horizontal"
-			android:paddingTop="@dimen/margin_activity_vertical">
+			android:orientation="horizontal"
+			android:padding="@dimen/margin_medium">
+
+			<ImageView
+				android:id="@+id/imageView"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:layout_gravity="center_vertical"
+				android:adjustViewBounds="true"
+				android:padding="@dimen/margin_medium"
+				android:scaleType="fitCenter"
+				android:src="@drawable/qr_code_intro"/>
 
 			<LinearLayout
-				android:layout_width="match_parent"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:layout_gravity="center_vertical"
 				android:background="@drawable/border_explanation"
 				android:orientation="vertical"
 				android:padding="@dimen/margin_large">
@@ -51,6 +44,7 @@
 					android:layout_height="wrap_content"
 					android:adjustViewBounds="true"
 					android:padding="@dimen/margin_medium"
+					android:scaleType="fitCenter"
 					android:src="@drawable/qr_code_explanation"
 					tools:ignore="ContentDescription"/>
 
@@ -63,17 +57,17 @@
 
 			</LinearLayout>
 
-			<Button
-				android:id="@+id/continueButton"
-				style="@style/BriarButton.Default"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_horizontal"
-				android:layout_marginTop="@dimen/margin_medium"
-				android:text="@string/continue_button"/>
-
 		</LinearLayout>
 
-	</ScrollView>
+		<Button
+			android:id="@+id/continueButton"
+			style="@style/BriarButton.Default"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:layout_marginTop="@dimen/margin_medium"
+			android:text="@string/continue_button"/>
 
-</LinearLayout>
+	</LinearLayout>
+
+</ScrollView>
